fix(hidpi): some widgets not showing correctly
- close button on tabs
- window corners are not filled ( dot holes )
- search panel background not correct
- highlighted part of progress bar width not correct

--- a/style.css
+++ b/style.css
@@ -145,13 +145,13 @@
 }
 
 .search_dark_box {
-    background: rgba(32,32,32,0.5);
+    background: rgba(32,32,32,0.8);
     border-radius: 0px 0px 0px 10px;
     border: 1px solid rgba(1,1,1,0.10);
 }
 
 .search_light_box {
-    background: rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0.8);
     border-radius: 0px 0px 0px 10px;
     border: 1px solid rgba(0,0,0,0.10);
 }
